<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="msg_take_red_packet">You got your own Red Packet</string>
    <string name="msg_take_someone_red_packet">You got Red Packet from %1$s</string>
    <string name="msg_someone_take_red_packet">%1$s got your Red Packet</string>
    <string name="easemob_red_packet">Easemob Red Packet</string>
    <string name="attach_red_packet">Red Packet</string>
    <string name="attach_transfer_money">Transfer</string>
    <string name="revokeing">正在撤回 请稍候……</string>
    <string name="update_black_list">更新黑名单</string>
    <string name="update_groups">更新群聊</string>
    <string name="update_black_list_failed">更新黑名单失败</string>
    <string name="update_groups_failed">更新群聊失败</string>
    <string name="update_contact_list_failed">更新联系人列表失败</string>
    <string name="update_contact_list">更新联系人列表</string>
    <string name="user_blocked_hint">此用户已被封禁</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="Sync_Groups_From_Server">从服务器下载群聊信息</string>
    <string name="exclusive_red_packet">Exclusive Red Packet</string>
    <string name="easemob_transfer_packet">[Transfer]Transfer%1$syuan</string>
    <string name="easemob_transfer_msg_sent">Your money transfer has been received</string>
    <string name="easemob_transfer_msg_received">You have received the transfer</string>
    <string name="msg_transfer_to_you">[Transfer]Transfer to you %1$s yuan</string>
    <string name="msg_transfer_from_you">[Transfer]Transfer%1$syuan</string>
    <string name="change">Change</string>
    <string name="app_name">理念</string>
    <string name="app_first_name">理念头条</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="yuyin">育婴员课程</string>
    <string name="changshi">小白</string>
    <string name="yuyinyuan">育婴员</string>
    <string name="jiazheng">家政服务员</string>
    <string name="yanglao">养老护理员</string>
    <string name="kanshipin">视频</string>
    <string name="tiku">题库</string>
    <string name="chuji">初级考试</string>
    <string name="zhongji">中级考试</string>
    <string name="gaoji">高级考试</string>
    <string name="quanbu">全部课程</string>
    <string name="wode">我的课程</string>
    <string name="cuoti">我的错题</string>
    <string name="shoucang">我的收藏</string>
    <string name="dlzc">登录/注册</string>
    <string name="fenxi">价值</string>
    <string name="zixun">快讯</string>
    <string name="shipin">态度</string>
    <string name="rank">会员等级:</string>
    <string name="setting_var">修改备注</string>
    <string name="login_word">登录后可享受更多服务</string>
    <string name="puhui">普技能、慧生活</string>
    <string name="title_activity_empty">EmptyActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_search_hint">输入相关关键词或课程名称</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello">下拉可刷新 </string>
    <string name="refresh_down_text">下拉可刷新</string>
    <string name="refresh_release_text">松开可刷新</string>
    <string name="toast_text">LinearLayout下拉刷新完毕</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="app_setname">美匠一站式学习APP</string>
    <string name="guanyu">\u3000\u3000厦门普慧众佳文化科技有限公司秉着普技能、慧生活的经营理念，引进港台地区及国际先进的家庭服务教育思维，创立“闽台家庭服务人才实训基地”设有育婴员、家政服务员、养老护理员等多个家庭服务职业工种系统性学习课程，侧重于技能实操
        教学；首创“美匠”职业教育在线学习平台，主要包含网上注册报名；课程管理；整合多种格式的知识、信息资源；学习评估、结果跟踪、生成学习报告等功能；通过BBS，实训基地面授培训等方式提供学员与学员、学员与讲师间的交互沟通渠道；旨在传递，跟踪，报告和管理学习内容，掌握学习进度，提高
        学习效率，力求学以致用；专注于培养家庭服务业实用性人才，推动行业标准化建设与服务的健康发展！\n\n愿景：专注于家庭服务与教育领域并成为行业领导品牌\n使命：普技能、慧生活\n\n普慧众佳核心价值（Core Values）\n恒信   拓新  务实   进取
</string>
    <string name="title_activity_login_intpu">LoginIntpuActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="txtCredits">注册表示您同意<a href="http://192.168.10.12/注册会员《美匠使用协议》.txt">美匠使用协议</a></string>
    <string name="title_activity_get_code">GetCodeActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_edit_info">EditInfoActivity</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新中</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="text">http://miloisbadboy.com/</string>
    <string name="passwordtype">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ .!@#$%^*_-()+=?/:;,"'[]{}\|</string>
    <string name="code_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="net_error_warning">网络错误,请检查您的网络或稍后再试</string>
    <string name="weibo">\u3000\u3000新浪微博:@美业教育</string>
    <string name="weixin">\u3000\u3000微信公众号:美业教育</string>
    <string name="title_activity_wxentry">WXEntryActivity</string>
    <string name="video_net">允许2G/3G/4G网络观看视频</string>
    <string name="modify_password">修改密码</string>
    <string name="video_net_warn">使用2G/3G/4G网络观看视频会消耗较多流量，确定要开启吗？</string>
    <string name="net_tip">网络提示</string>
    <string name="net_tip_ok">确定</string>
    <string name="net_tip_cancel">取消</string>
    <string name="tip_no_pay">您需要支付</string>
    <string name="tip_rmb">元</string>
    <string name="instatle_weixin">您还没安装微信，请先安装</string>
    <string name="no_suppose_weixin">当前版本不支持支付功能</string>
    <string name="generic_server_down">连接服务器失败</string>
    <string name="no_internet">无网络连接</string>
    <string name="generic_error">网络异常，请稍后再试</string>
    <string name="netreques_error">网络请求数据异常</string>
    <string name="loading">正在加载中&#8230;</string>
    <string name="sign_up">已报名</string>
    <string name="un_sign_up">未报名</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="bc_pay" formatted="false">微信支付</string>
    <string name="bc_pay_wx_title">微信支付</string>
    <string name="bc_pay_goto_wx">打开微信支付</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_cancel">取消支付</string>
    <string name="without_sdcard">无sd卡</string>
    <string name="without_sdcard_work">无sd卡,无法下载作品</string>
    <string name="save_picture_success">图片保存成功!</string>
    <string name="crop_image">裁剪图片</string>
    <string name="clearing">清除中&#8230;</string>
    <string name="take_photo">拍照</string>
    <string name="pick_from_album">相册</string>
    <string name="no_sdCard">无SD卡，请插入SD卡后再试</string>
    <string name="confirm_delete">确定删除</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="page_indicator">%1$d/%2$d</string>
    <string name="say">回力</string>
    <string name="zan">给力</string>
    <string name="vip_title">VIP课程</string>
    <string name="phone">电话：</string>
    <string name="adress">地址：</string>
    <string name="school_commomt">学校介绍</string>
    <string name="school_power">师资力量</string>
    <string name="school_new">最新排课</string>
    <string name="no_data">没有数据</string>
    <string name="all">全部</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="course_recommomt">课程评论</string>
    <string name="course_introduce">课程介绍</string>
    <string name="sex">性别</string>
    <string name="note">个性签名</string>
    <string name="modify_over">修改成功</string>
    <string name="can_no_empty">评论不能为空</string>
    <string name="can_no_over">您输入的内容过长</string>
    <string name="pay_title">支付订单</string>
    <string name="weixin_pay">微信支付</string>
    <string name="weixin_tip">推荐按照微信5.0及以上版本的用户使用</string>
    <string name="zhifubao_pay">支付宝支付</string>
    <string name="zhifubao_tip">推荐有支付宝帐号的用户使用</string>
    <string name="year_free">美业VIP会员</string>
    <string name="become_year_free">确定</string>
    <string name="introduce_of_year">会员权益</string>
    <string name="news_title">文章详情</string>
    <string name="send">发送</string>
    <string name="all_comment">全部评论</string>
    <string name="sure_to_pay">确认支付</string>
    <string name="tip">请绑定持卡人本人的银行卡</string>
    <string name="car_main">持&#160;&#160;卡&#160;&#160;人</string>
    <string name="car_number">卡&#160;&#160;&#160;&#160;&#160;&#160;&#160;号</string>
    <string name="phone_number">手机号码</string>
    <string name="bank_name">银行名称</string>
    <string name="bing_car">绑定银行卡</string>
    <string name="hint_input_carnum">请输入银行卡号</string>
    <string name="band_car_number">银行卡号</string>
    <string name="cash_number">提现金额</string>
    <string name="current_money">当前财富余额</string>
    <string name="unit">元</string>
    <string name="all_cash">全部提现</string>
    <string name="cash">提现</string>
    <string name="input_card_number">请输入您的银行卡号码</string>
    <string name="error_bank">输入的银行卡号有误</string>
    <string name="input_name">请输入银行卡持卡人</string>
    <string name="input_phone">请输入银行绑定的手机号</string>
    <string name="input_bank_name">请选择银行卡类型</string>
    <string name="my_card">我的银行卡</string>
    <string name="bank_number">****&#160;****&#160;****&#160;</string>
    <string name="add_bank">添加银行卡</string>
    <string name="input_money">请输入提现金额</string>
    <string name="tip_no_money">提现金额要大于0.01元</string>
    <string name="no_enough_money">余额不足</string>
    <string name="money_detail_title">收支明细</string>
    <string name="banks_name">*&#160;*&#160;*&#160;*</string>
    <string name="work_recomment">视频观看卡</string>
    <string name="publicsh_work">发力</string>
    <string name="my_video_card">理念头条</string>
    <string name="my_shopping_car">我的购物车</string>
    <string name="money_describe">￥%1$s</string>
    <string name="please_goods">请选择商品</string>
    <string name="sure_to_delete">确定</string>
    <string name="shoping">商城</string>
    <string name="shop_card">购物车</string>
    <string name="right_on_pay">立即购买</string>
    <string name="add_to_card">加入购物车</string>
    <string name="limit_buy">限时促销</string>
    <string name="video_look">视频观看卡</string>
    <string name="pay_detail">支付订单</string>
    <string name="pay_detail_order">订单编号：</string>
    <string name="pay_detail_allmoney">订单总价</string>
    <string name="pay_detail_paymoney">应付款</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_footer_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_footer_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="send_fail">Send failed</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
</resources>