<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white_a"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="15dip"
            android:background="@color/line_gray"
            android:text="@string/take_photo"
            android:textSize="18sp"
            android:textColor="@color/bg_black" />

        <Button
            android:id="@+id/btn_pick_photo"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="13dip"
            android:background="@color/line_gray"
            android:text="@string/pick_from_album"
            android:textSize="18sp"
            android:textColor="@color/bg_black" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="13dip"
            android:background="@color/line_gray"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textColor="@color/bg_black" />
    </LinearLayout>

</RelativeLayout>