<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/bg_default">

    <LinearLayout
        android:id="@+id/popup_anima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/bg_default"
        >

        <TextView
            android:id="@+id/pop_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="@color/bg_green"
            android:textSize="18sp"
            android:text="评论"/>

        <View style="@style/line_style"/>

        <EditText
            android:id="@+id/ed_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/say"
            android:cursorVisible="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/line_gray"
                android:text="@string/cancel"
                android:textColor="@color/text_white"/>
            
            <View
                android:layout_width="20dp"
                android:layout_height="1dp"
                />

            <Button
                android:id="@+id/btn_Compelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bg_green"
                android:text="@string/net_tip_ok"
                android:textColor="@color/text_white"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>