<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_pressed"
     >
    
    
    <RelativeLayout
        android:id="@+id/school_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="13dp"
        >
        <ImageView
            android:id="@+id/line_school_iv"
            android:layout_width="116dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher"
            />
        
        <TextView
            android:id="@+id/line_school_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/line_school_iv"
            android:layout_marginLeft="6dp"
            android:layout_alignTop="@+id/line_school_iv"
            android:textSize="14sp"
            android:textColor="@color/text_gray_title"
            android:text="反特斯美发培训学校"
            />
        <TextView
            android:id="@+id/line_school_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_school_tv_title"
            android:layout_marginTop="3dp"
            android:layout_alignLeft="@+id/line_school_tv_title"
            android:textSize="12sp"
            android:textColor="@color/text_gray_title"
            android:text="@string/phone"
            />
        <TextView
            android:id="@+id/line_school_tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/line_school_phone"
            android:layout_marginLeft="3dp"
            android:layout_alignTop="@+id/line_school_phone"
            android:textSize="12sp"
            android:textColor="@color/text_gray_title"
            android:text="15250412548"
            />
        <TextView
            android:id="@+id/line_school_adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_school_phone"
            android:layout_alignLeft="@+id/line_school_phone"
            android:textSize="12sp"
            android:textColor="@color/text_gray_title"
            android:text="@string/adress"
            />
        <TextView
            android:id="@+id/line_school_tv_adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/line_school_adress"
            android:singleLine="true"
            android:layout_marginLeft="3dp"
            android:layout_alignTop="@+id/line_school_adress"
            android:textSize="12sp"
            android:textColor="@color/text_gray_title"
            android:text="厦门市思明区软件园二期"
            />
        
        <RelativeLayout
            android:id="@+id/line_school_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/line_school_iv"
            android:layout_below="@+id/line_school_adress"
            android:layout_alignLeft="@+id/line_school_adress"
            >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:gravity="center"
            android:layout_marginTop="3dp"
            android:textSize="12sp"
            android:textColor="@color/text_white"
            android:text="@string/school_commomt"
            android:background="@color/bg_green"
            />
        
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/line_school_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/line_school_sign_up"
            android:layout_alignBottom="@+id/line_school_iv"
            android:layout_below="@+id/line_school_adress"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="3dp"
            android:textSize="12sp"
            android:textColor="@color/text_white"
            android:text="@string/school_power"
            android:background="@color/bg_blue"
            />
        
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/line_school_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/line_school_power"
            android:layout_alignBottom="@+id/line_school_iv"
            android:layout_below="@+id/line_school_adress"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="3dp"
            android:textSize="12sp"
            android:textColor="@color/text_white"
            android:text="@string/school_new"
            android:background="@color/yellow_new"
            />
        </RelativeLayout>
        </RelativeLayout>

</RelativeLayout>
